unity in color design

--- a/ressources/carte/show_carte.ejs
+++ b/ressources/carte/show_carte.ejs
@@ -60,7 +60,7 @@
 
 		<form @submit.prevent="submitComm" name="Commentaire">
 
-			<textarea id="comment" v-model="contenuComm" class="w3-input w3-border w3-round-large"></textarea>
+			<textarea id="comment" v-model="contenuComm" placeholder="Commentaire" class="w3-input w3-border w3-round-large"></textarea>
 
 			<input type="submit" class="w3-button w3-light-green" value="Valider">
 			
