--- a/ressources/login/sign_form.ejs
+++ b/ressources/login/sign_form.ejs
@@ -26,13 +26,13 @@
 		<form action="/login/signin" method="post" name="Sign">
 			
 			<label name="user_name">Nom d'utilisateur</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="user_name" required>
+			<input class="w3-input w3-border w3-round-large" placeholder="Nom d'Utilisateur" type="text" name="user_name" required>
 
 			<label name="pass">Mot de passe</label>
-			<input class="w3-input w3-border w3-round-large" type="password" name="pass" required>	
+			<input class="w3-input w3-border w3-round-large" type="password" placeholder="Mot de passe" name="pass" required>	
 
 			<label name="pass_confirm">Confirmer Mot de passe</label>
-			<input class="w3-input w3-border w3-round-large" type="password" name="pass_confirm" required>		
+			<input class="w3-input w3-border w3-round-large" type="password" placeholder="Mot de passe" name="pass_confirm" required>		
 
 			<label name="birth_date">Date de Naissance</label>
 			<input class="w3-input w3-border w3-round-large" type="date" name="birth_date" required>		
