unity in color design

--- a/ressources/carte/template_var.ejs
+++ b/ressources/carte/template_var.ejs
@@ -19,7 +19,7 @@
 			<input class="w3-input w3-border w3-round-large" type="text" name="image_url" placeholder="URL" required>
 			
 			<label name="flavor">Texte d'ambience</label>
-			<input class="w3-input w3-border w3-round-large" type="text" name="flavor" placeholder="Il y a longtemps, ..." >
+			<textarea class="w3-input w3-border w3-round-large" name="flavor" placeholder="Il y a longtemps, ..." form="carte"></textarea> 
 			
 			<label name="scry_url">URL de scryfall</label>
 			<input class="w3-input w3-border w3-round-large" type="text" name="scry_url" placeholder="URL" required>
