--- a/ressources/layout/foot.ejs
+++ b/ressources/layout/foot.ejs
@@ -18,7 +18,7 @@
 
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
 <%- vue %>
 
 </body>
